@@ -4,6 +4,12 @@
 from DateTime import DateTime
 from Products.CMFCore.utils import getToolByName
 
+HAS_COLLECTIVE_INDEXING = True
+try:
+    from collective.indexing.queue import processQueue
+except ImportError:
+    HAS_COLLECTIVE_INDEXING = False
+
 
 def searchResults(self, REQUEST=None, **kw):
     """ Calls ZCatalog.searchResults with extra arguments that
@@ -18,6 +24,10 @@ def searchResults(self, REQUEST=None, **kw):
     if membershipTool.isAnonymousUser():
         kw['review_state'] = 'published'
         kw['effectiveRange'] = DateTime()
+
+    if HAS_COLLECTIVE_INDEXING:
+        # flush the queue before querying the catalog
+        processQueue()
 
     return self._old_searchResults(REQUEST, **kw)
 
